# pacman-gym

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
src/pacman_gym/: __main__.py  game.py  gym_env.py  main.py  teach.py  train.py
