[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pacman-gym"
version = "0.1.0"
description = "Pac-Man DQN learning environment with live training visualization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pygame>=2.5",
    "numpy>=1.24",
    "torch>=2.0",
    "gymnasium>=0.29",
]

[tool.setuptools.packages.find]
where = ["src"]
